app/styles/_components.scss
/* ... */
.osf-project-navbar li.active a {
    color: #fff;
}

.osf-project-navbar a.project-title {
    font-weight: 300;
    font-size: 20px;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.osf-project-navbar li>a {
    padding-left: 15px;
    padding-right: 15px;
}

@media (max-width: 767px) {
    .osf-project-navbar li>a {
        padding-left: 30px;
        padding-right: 30px;
    }
}

@media (min-width: 768px) and (max-width: 991px) {
    .osf-project-navbar li>a {
        padding-left: 5px;
        padding-right: 5px;
    }

    .osf-project-navbar a.project-title {
        max-width: 190px;
    }
}

@media (min-width: 992px) {
    .osf-project-navbar a.project-title {
        max-width: 300px;
    }

    .navbar-nav>li>a {
        padding-top: 11px;
        padding-bottom: 11px;
    }

    #secondary-navigation {
        /* necessary for the parent flexbox container to shrink smaller than the child element's text */
        min-width: 0;
        margin-left: auto;
    }

    #secondary-navigation .navbar-nav>li>a {
        line-height: 27px;
    }
}

@media (min-width: 1200px) {
    .osf-project-navbar a.project-title {
        max-width: 400px;
    }
}

@media (max-width: 991px) {
    #navbarScope div.container {
        width: 100%;
    }

    .navbar-header {
        float: none;
        width: 100%;
    }

    .navbar-toggle {
        display: block;
    }

    .navbar-toggle.collapsed {
        margin-left: auto;
    }

    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
        min-width: 0;
        /* necessary for the parent flexbox container to shrink smaller than the child element's text */
    }

    .navbar-collapse.collapse {
        display: none !important;
    }

    .navbar-nav {
        margin: 7.5px 0 0 -15px;
    }

    .navbar-nav>li {
        float: none;
    }

    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }

    .navbar-text {
        float: none;
        margin: 15px 0;
    }

    /* since 3.1.0 */
    .navbar-collapse.collapse.in {
        display: block !important;
    }

    .collapsing {
        overflow: hidden !important;
    }
}

@media (min-width: 992px) {
    .nav.navbar-nav {
        display: flex;
        float: none;
    }

    .nav.navbar-nav>li {
        white-space: nowrap;
        float: none;
    }

    .nav.navbar-nav .dropdown.secondary-nav-dropdown {
        /* necessary for the parent flexbox container to shrink smaller than the child element's text */
        min-width: 0;
    }

    .dropdown .btn-link {
        display: flex;
        align-items: center;
    }
}

/* Form Inputs */
.noresize {
    resize: none;
}

.navbar-donate-button a {
    color: #9cd59c !important;
}

.nav-profile-name {
    overflow: hidden;
    text-overflow: ellipsis;
    height: 28px;
    float: left;
    white-space: nowrap;
}

@media (max-width: 1200px) {
    .nav-profile-name {
        max-width: 300px;
    }
}

.osf-profile-image {
    float: left;
}

.osf-profile-image>img {
    border: 1px solid #cdcdcd;
    border-radius: 13px;
    margin-right: 5px;
}


/*
 * Bootstrap Overrides
 */
.btn-default {
    background-color: $bg-light;
}

.btn {
    border-radius: $radius;
}

.form-control {
    border-radius: $radius;

    &::placeholder {
        color: $color-text-gray-light;
    }
}

/* FLAT PANELS */
.panel {
    border-radius: 0;
}

.panel-heading {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.panel-footer {
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

.panel-title {
    display: inline-block;
    float: left;
    font-weight: 400;
}

/* FLAT MODALS */
.modal-footer {
    border-top: none;
}

/* FLAT ALERTS */
.alert {
    border-radius: $radius;
    padding: 10px 15px;
}

.alert-dismissable,
.alert-dismissible {
    padding-right: 35px;
}

/* FIX BORDER RADIUS ACROSS THE BOARD*/
.well,
.progress,
.modal-content {
    border-radius: $radius;
}

/* Normal the heading in modal-header */
.modal-header>h3 {
    font-weight: normal;
}

/* TABS */
.nav-tabs>li>a {
    border: 1px solid rgba(0, 0, 0, 0);
    border-radius: 0;
}

.nav-tabs>li.active>a,
.nav-tabs>li.active>a:hover,
.nav-tabs>li.active>a:focus {
    background-color: $bg-light;
    border: none;
    border-bottom: 2px solid #204762;
}

.nav-tabs>li>a:hover {
    border-color: transparent;
    border-bottom: none;
}

.nav>li>a:hover,
.nav>li>a:focus {
    background-color: $bg-light;
}


#navbarScope {
    top: 0;
    transition: top 0.3s ease-in-out;
}

#navbarScope.off {
    top: -250px;
}

#navbarScope a {
    color: #fff;
}

#navbarScope a:hover {
    color: rgba(255, 255, 255, 0.8);
    background-color: inherit;
}

#navbarScope .button-container {
    display: flex;
}

#navbarScope .btn-top-signup {
    padding: 4px 13px;
    margin-top: 3px;
    font-size: 15px;
    color: #fff;
}

#navbarScope .btn-top-login {
    padding: 4px 17px;
    margin-top: 3px;
    font-size: 15px;
}

#navbarScope .btn-top-login:hover {
    background-color: #124a5b;
    border-color: #0e3946;
}

.navbar-default {
    background-image: linear-gradient(to bottom, #fff 0%, #f8f8f8 100%);
    background-repeat: repeat-x;
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffff', endColorstr='#fff8f8f8', GradientType=0);
    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
    border-radius: 4px;
    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 5px rgba(0, 0, 0, 0.075);
    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 5px rgba(0, 0, 0, 0.075);
}
/* ... */

